<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">onTap</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="todo">TODO</string>
    <string name="this_application_does_not_support_under_age_drinking_so_to_help_alleviate_minors_obtaining_information_on_alcholic_beverages_please_vefiy_your_birthdate_">This application does not support under-age drinking so to help alleviate minors obtaining information on alcholic beverages please vefiy your birthdate.</string>
    <string name="title_activity_splash_page">SplashPage</string>
    <string name="title_activity_age_verification">AgeVerification</string>
    <string name="title_activity_find_abeer">FindABeer</string>
    <string name="title_activity_events">Events</string>
    <string name="title_activity_more_details">MoreDetails</string>
    <string name="title_activity_brewery_details">BreweryDetails</string>
    <string name="title_activity_favorites">Favorites</string>
    <string name="beertitlehere">BeerTitleHere</string>
    <string name="beer_description_will_go_here_and_will_give_specific_details_on_beer">BEER DESCRIPTION WILL GO HERE AND WILL GIVE SPECIFIC DETAILS ON BEER</string>
    <string name="search_beer">Search Beer</string>
    <string name="website_">Website:</string>
    <string name="venue_">Venue:</string>
    <string name="event_type_">Event Type:</string>
    <string name="description_of_event_here_">Description of event here:</string>
    <string name="eventname_">EventName:</string>
    <string name="birthdate_will_be_shown_here">Birthdate will be shown here</string>
    <string name="age_verified_continue">Age Verified..Continue</string>
    <string name="click_here_to_enter_birthdate">Click Here to Enter Birthdate</string>
    <string name="enter_your_birthdate_to_gain_access">Enter Your Birthdate to gain access</string>
    <string name="your_favorite_beers">Your Favorite Beers</string>
    <string name="the_favorite_beers_will_be_loaded_inside_here">The favorite beers will be loaded inside here</string>
    <string name="type_beer">Type:Beer</string>
    <string name="description_goes_here_">DESCRIPTION GOES HERE...</string>
    <string name="abv_4_5_">ABV:4.5%</string>
    <string name="available">Available</string>
    <string name="beer_name_here_">BEER NAME HERE:</string>
    <string name="brewerydetails">BreweryDetails</string>
    <string name="sam_adams">Sam Adams</string>
    <string name="favorites">Favorites</string>
    <string name="share">Share</string>
    <string name="title_activity_event_details">EventDetails</string>
    <string name="title_activity_favorite_list">FavoriteList</string>

</resources>
