<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android1="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/texturebkg"
    tools:context=".MainActivity" >

    <TabHost
        android1:id="@+id/tabhost"
        android1:layout_width="fill_parent"
        android1:layout_height="fill_parent"
>

        <LinearLayout
            android1:layout_width="match_parent"
            android1:layout_height="380dp"
            android1:orientation="vertical" >

            <TabWidget
                android1:id="@android:id/tabs"
                android1:layout_width="match_parent"
                android1:layout_height="wrap_content"
                android1:background="@color/sysLtGray"
                android1:gravity="top" >

            </TabWidget>

            <FrameLayout
                android1:id="@android:id/tabcontent"
                android1:layout_width="fill_parent"
                android1:layout_height="fill_parent" >

                <LinearLayout
                    android1:id="@+id/tab1"
                    android1:layout_width="match_parent"
                    android1:layout_height="410dp"
                    android1:gravity="center|top"
                    android1:orientation="vertical" >

                    <TextView
                        android1:id="@+id/textView1"
                        android1:layout_width="wrap_content"
                        android1:layout_height="wrap_content"
                        android1:text="@string/beertitlehere" />

                    <ImageView
                        android1:id="@+id/imageView1"
                        android1:layout_width="wrap_content"
                        android1:layout_height="wrap_content"
                        android1:src="@drawable/images" android1:contentDescription="TODO"/>

                    <TextView
                        android1:id="@+id/textView2"
                        android1:layout_width="wrap_content"
                        android1:layout_height="match_parent"
                        android1:text="@string/beer_description_will_go_here_and_will_give_specific_details_on_beer"
                        android1:textAppearance="?android:attr/textAppearanceLarge" />
</LinearLayout>
                   
                <LinearLayout
                    android1:id="@+id/tab2"
                    android1:layout_width="match_parent"
                    android1:layout_height="match_parent"
                    android1:orientation="vertical" >

                    <Button
                        android1:id="@+id/searchButn"
                        android1:layout_width="wrap_content"
                        android1:layout_height="wrap_content"
                        android1:text="@string/search_beer" />

                    <ImageButton
                        android1:id="@+id/scannerButn"
                        android1:layout_width="wrap_content"
                        android1:layout_height="wrap_content"
                        android1:layout_alignRight="@id/searchButn" 
           
                        android1:src="@drawable/reader" />
                    
                     <EditText
                        android1:id="@+id/beerText"
                        android1:layout_width="wrap_content"
                        android1:layout_height="wrap_content" android1:inputType=""/>

                     <ListView
                         android1:id="@+id/list"
                         android1:layout_width="fill_parent"
                         android1:layout_height="wrap_content" >
                     </ListView>
                    <TextView android:id="@+id/homeItemName" 
    			android:layout_width="wrap_content"
   			 android:layout_height="wrap_content"
    			android:layout_weight="1"/>
                </LinearLayout>

                <LinearLayout
                    android1:id="@+id/tab3"
                    android1:layout_width="match_parent"
                    android1:layout_height="match_parent"
                    android1:orientation="vertical" >

                    <TextView
                        android1:id="@+id/eventName"
                        android1:layout_width="wrap_content"
                        android1:layout_height="wrap_content"
                        android1:text="@string/eventname_"
                        android1:textAppearance="?android:attr/textAppearanceLarge" 
                        android1:gravity="center"/>

                    <TextView
                        android1:id="@+id/description"
                        android1:layout_width="wrap_content"
                        android1:layout_height="wrap_content"
                        android1:text="@string/description_of_event_here_" />

                    <TextView
                        android1:id="@+id/eventType"
                        android1:layout_width="wrap_content"
                        android1:layout_height="wrap_content"
                        android1:text="@string/event_type_"
                        android1:textAppearance="?android:attr/textAppearanceLarge" />

                    <TextView
                        android1:id="@+id/venue"
                        android1:layout_width="wrap_content"
                        android1:layout_height="wrap_content"
                        android1:text="@string/venue_"
                        android1:textAppearance="?android:attr/textAppearanceLarge" />

                    <TextView
                        android1:id="@+id/webSite"
                        android1:layout_width="wrap_content"
                        android1:layout_height="wrap_content"
                        android1:text="@string/website_"
                        android1:textAppearance="?android:attr/textAppearanceLarge" />

                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </TabHost>

</RelativeLayout>